ajustes e adicionando dicas e feature para tentar informar toda a plavra

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,45 @@
 @-ms-viewport {
   width: device-width;
+  height: auto;
 }
 
+@media screen and (max-width: 799px) {
 .parent-img {
     position: relative;
-}
+  }
 
-::after ::before{
+  ::after ::before {
     box-sizing: inherit;
-}
+  }
 
-.parent-img-responsive {
+  .parent-responsive {
     width: 100%;
     height: auto;
-}
+  }
 
-.child-img {
+  .parent-img-responsive {
+    width: 100%;
+    height: auto;
+  }
+
+  .child-img {
     position: absolute;
     top: 17.5%;
     left: 15.5%;
     right: 50%;
     bottom: 10%;
-}
+  }
 
-/*** for the result */
-.box {
+  .body-img {
+    position: absolute;
+    top: 9%;
+    left: 18%;
+    /*right: 50%;
+  bottom: 10%; */
+  }
+
+  /*** for the result */
+  .box {
     width: 40%;
     height: 25%;
     position: absolute;
@@ -33,16 +48,82 @@
     opacity: 0.94;
     /*background: #0057e3;*/
   }
+
   .overlay {
     z-index: 9;
-/*    background: #009938; */
+    /*    background: #009938; */
   }
-  .box-lose{
-    border-color:#876605; 
+
+  .box-lose {
+    border-color: #876605;
     background-color: #ffc107;
   }
 
-  .box-win{
+  .box-win {
     border-color: #033785;
     background-color: #0d6efd;
   }
+}
+
+
+.parent-img {
+    position: relative;
+  }
+
+  ::after ::before {
+    box-sizing: inherit;
+  }
+
+  .parent-responsive {
+    width: 100%;
+    height: auto;
+  }
+
+  .parent-img-responsive {
+    width: 100%;
+    height: auto;
+  }
+
+  .child-img {
+    position: absolute;
+    top: 17.5%;
+    left: 15.5%;
+    right: 50%;
+    bottom: 10%;
+  }
+
+  .body-img {
+    position: absolute;
+    top: 12.2%;
+    left: 8%;
+    /*right: 50%;
+  bottom: 10%; */
+  }
+
+  /*** for the result */
+  .box {
+    width: 40%;
+    height: 25%;
+    position: absolute;
+    top: 38%;
+    left: 30%;
+    opacity: 0.94;
+    /*background: #0057e3;*/
+  }
+
+  .overlay {
+    z-index: 9;
+    /*    background: #009938; */
+  }
+
+  .box-lose {
+    border-color: #876605;
+    background-color: #ffc107;
+  }
+
+  .box-win {
+    border-color: #033785;
+    background-color: #0d6efd;
+  }
+
+
